--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -193,7 +193,7 @@
    "outputs": [],
    "source": [
     "def parse_trips(trips):\n",
-    "    parsed=[{trip}]"
+    "    parsed=[{\"trip_distance}]"
    ]
   },
   {
