--- a/index.ipynb
+++ b/index.ipynb
@@ -193,7 +193,7 @@
    "outputs": [],
    "source": [
     "def parse_trips(trips):\n",
-    "    parsed=[{\"trip_distance\":trips.get(\"trip_distance\", \"pick\")}]"
+    "    parsed=[{\"trip_distance\":trips.get(\"trip_distance\", \"pickup_latitude\":)}]"
    ]
   },
   {
