--- a/index.ipynb
+++ b/index.ipynb
@@ -193,7 +193,7 @@
    "outputs": [],
    "source": [
     "def parse_trips(trips):\n",
-    "    parsed=[{\"trip_distance\":trips.get(\"trip_distance\", \"pickup_latitude\":trips.get(\"pickup_latitude\")),\"pickup_longitude\"}]"
+    "    parsed=[{\"trip_distance\":trips.get(\"trip_distance\", \"pickup_latitude\":trips.get(\"pickup_latitude\")),\"pickup_longitude\":trips.}]"
    ]
   },
   {
