--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -202,7 +202,7 @@
    ],
    "source": [
     "def parse_trips(trips):\n",
-    "    parsed={\"trip_distance\":trips[0].get(\"trip_distance\", \"pickup_latitude\":trips[0.get(\"pickup_latitude\")),\"pickup_longitude\":trips.get(\"pickup_longitude\")}\n",
+    "    parsed={\"trip_distance\":trips[0].get(\"trip_distance\", \"pickup_latitude\":trips[0].get(\"pickup_latitude\")),\"pickup_longitude\":trips.get(\"pickup_longitude\")}\n",
     "    return parsed"
    ]
   },
