--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -188,21 +188,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-5-1d9e8e5eea75>, line 2)",
+     "evalue": "invalid syntax (<ipython-input-6-82dbf0cff06a>, line 2)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-5-1d9e8e5eea75>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    parsed={\"trip_distance\":trips.get(\"trip_distance\", \"pickup_latitude\":trips.get(\"pickup_latitude\")),\"pickup_longitude\":trips.get(\"pickup_longitude\")}\u001b[0m\n\u001b[0m                                                                        ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-6-82dbf0cff06a>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    parsed={\"trip_distance\":trips[0].get(\"trip_distance\", \"pickup_latitude\":trips[0].get(\"pickup_latitude\")),\"pickup_longitude\":trips[0].get(\"pickup_longitude\")}\u001b[0m\n\u001b[0m                                                                           ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
    "source": [
     "def parse_trips(trips):\n",
-    "    parsed={\"trip_distance\":trips[0].get(\"trip_distance\", \"pickup_latitude\":trips[0].get(\"pickup_latitude\")),\"pickup_longitude\":trips.get(\"pickup_longitude\")}\n",
+    "    parsed={\"trip_distance\":trips[0].get(\"trip_distance\"), \"pickup_latitude\":trips[0].get(\"pickup_latitude\")),\"pickup_longitude\":trips[0].get(\"pickup_longitude\")}\n",
     "    return parsed"
    ]
   },
