automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -205,6 +205,7 @@
    ],
    "source": [
     "def parse_trips(trips):\n",
+    "    parsed\n",
     "    parsed={\"trip_distance\":trips[0].get(\"trip_distance\"), \"pickup_latitude\":trips[0].get(\"pickup_latitude\"),\"pickup_longitude\":trips[0].get(\"pickup_longitude\")}\n",
     "    return parsed\n"
    ]
