automatically backed up by learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -206,7 +206,7 @@
    "source": [
     "def parse_trips(trips):\n",
     "    parsed=[]\n",
-    "    n=()\n",
+    "    n=range(0,)\n",
     "    parsed_all={\"trip_distance\":trips[0].get(\"trip_distance\"), \"pickup_latitude\":trips[0].get(\"pickup_latitude\"),\"pickup_longitude\":trips[0].get(\"pickup_longitude\")}\n",
     "    return parsed\n"
    ]
