--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -207,7 +207,7 @@
     "def parse_trips(trips):\n",
     "    parsed=[]\n",
     "    n=range(0,len(trips))\n",
-    "    parsed_all={\"trip_distance\":trips[0].get(\"trip_distance\"), \"pickup_latitude\":trips[0].get(\"pickup_latitude\"),\"pickup_longitude\":trips[0].get(\"pickup_longitude\")}\n",
+    "    parsed_all={\"trip_distance\":trips[n].get(\"trip_distance\"), \"pickup_latitude\":trips[0].get(\"pickup_latitude\"),\"pickup_longitude\":trips[0].get(\"pickup_longitude\")}\n",
     "    return parsed\n"
    ]
   },
