--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -206,8 +206,8 @@
    "source": [
     "def parse_trips(trips):\n",
     "    parsed=[]\n",
-    "    n=range(0,len(trips\n",
-    "    for parsed_all in trips:\n",
+    "    n=0\n",
+    "    while n:\n",
     "    parsed_all={\"trip_distance\":trips[n].get(\"trip_distance\"), \"pickup_latitude\":trips[n].get(\"pickup_latitude\"),\"pickup_longitude\":trips[n].get(\"pickup_longitude\")}\n",
     "    return parsed\n"
    ]
