automatically backed up by learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -207,7 +207,7 @@
     "def parse_trips(trips):\n",
     "    parsed=[]\n",
     "    n=0\n",
-    "    while n:\n",
+    "    while n <= :\n",
     "    parsed_all={\"trip_distance\":trips[n].get(\"trip_distance\"), \"pickup_latitude\":trips[n].get(\"pickup_latitude\"),\"pickup_longitude\":trips[n].get(\"pickup_longitude\")}\n",
     "    return parsed\n"
    ]
