automatically backed up by learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -210,7 +210,7 @@
     "    while n <= len(trips):\n",
     "        parsed_all={\"trip_distance\":trips[n].get(\"trip_distance\"), \"pickup_latitude\":trips[n].get(\"pickup_latitude\"),\"pickup_longitude\":trips[n].get(\"pickup_longitude\")}\n",
     "        n+=1\n",
-    "        parsed.append\n",
+    "        parsed.append(parsed_all)\n",
     "    return parsed\n"
    ]
   },
