automatically backed up by learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -188,9 +188,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'parsed' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0mTraceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-14-64403685b59d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      7\u001b[0m         \u001b[0mparsed\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mparsed_all\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mparsed\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m \u001b[0mparsed\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'parsed' is not defined"
+     ]
+    }
+   ],
    "source": [
     "def parse_trips(trips):\n",
     "    parsed=[]\n",
@@ -199,7 +211,8 @@
     "        parsed_all={\"trip_distance\":trips[n].get(\"trip_distance\"), \"pickup_latitude\":trips[n].get(\"pickup_latitude\"),\"pickup_longitude\":trips[n].get(\"pickup_longitude\")}\n",
     "        n+=1\n",
     "        parsed.append(parsed_all)\n",
-    "    return parsed\n"
+    "    return parsed\n",
+    "parsed"
    ]
   },
   {
