--- a/index.ipynb
+++ b/index.ipynb
@@ -211,8 +211,7 @@
     "        parsed_all={\"trip_distance\":trips[n].get(\"trip_distance\"), \"pickup_latitude\":trips[n].get(\"pickup_latitude\"),\"pickup_longitude\":trips[n].get(\"pickup_longitude\")}\n",
     "        n+=1\n",
     "        parsed.append(parsed_all)\n",
-    "    return parsed\n",
-    "parsed"
+    "    return parsed\n"
    ]
   },
   {
