automatically backed up by learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -159,9 +159,16 @@
     }
    ],
    "source": [
-    "trips[0].keys()b\n",
+    "trips[0].keys()\n",
     "trips[0]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
