automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -169,7 +169,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x = trips[0].get()"
+    "x = trips[0].get(\"vendor_id\")\n"
    ]
   },
   {
