--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -165,20 +165,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-26-a23771e2c2b7>, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-26-a23771e2c2b7>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    x = trips[0;1000].get(\"vendor_id\")\u001b[0m\n\u001b[0m               ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
+     "data": {
+      "text/plain": [
+       "{'a': '2', 'b': 'VTS'}"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "x = trips[0;1000].get(\"vendor_id\")\n",
+    "x = trips[0].get(\"vendor_id\")\n",
     "\n",
     "y = trips[0].get(\"rate_code\")\n",
     "{\"a\":y,\"b\":x}"
