--- a/index.ipynb
+++ b/index.ipynb
@@ -181,7 +181,7 @@
     }
    ],
    "source": [
-    "n=range(0,len(trips)\n",
+    "n=range(0,len(trips))\n",
     "for x in trips:\n",
     "    \n",
     "x = trips[0].get(\"vendor_id\")\n",
