--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -184,9 +184,9 @@
     "n=range(0,len(trips))\n",
     "for x in trips:\n",
     "    \n",
-    "x = trips[0].get(\"vendor_id\")\n",
+    "x = trips[n].get(\"vendor_id\")\n",
     "\n",
-    "y = trips[0].get(\"rate_code\")\n",
+    "y = trips[n].get(\"rate_code\")\n",
     "{\"a\":y,\"b\":x}"
    ]
   },
