--- a/index.ipynb
+++ b/index.ipynb
@@ -184,7 +184,7 @@
     "n=range(0,len(trips))\n",
     "z=[]\n",
     "for x in trips:\n",
-    "    x = trips[n].get(\"vendor_id\")\n",
+    "     = trips[n].get(\"vendor_id\")\n",
     "    y = trips[n].get(\"rate_code\")\n",
     "{\"a\":y,\"b\":x}"
    ]
