automatically backed up by learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -183,8 +183,8 @@
    "source": [
     "n=range(0,len(trips))\n",
     "z=[]\n",
-    "for x in trips:\n",
-    "     = trips[n].get(\"vendor_id\")\n",
+    "for t in trips:\n",
+    "    x = trips[n].get(\"vendor_id\")\n",
     "    y = trips[n].get(\"rate_code\")\n",
     "{\"a\":y,\"b\":x}"
    ]
