--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -183,7 +183,7 @@
    "source": [
     "n=range(0,len(trips))\n",
     "z=[]\n",
-    "for t in trips:\n",
+    "for t in trips[n:\n",
     "    x = trips[n].get(\"vendor_id\")\n",
     "    y = trips[n].get(\"rate_code\")\n",
     "{\"a\":y,\"b\":x}"
