--- a/index.ipynb
+++ b/index.ipynb
@@ -223,8 +223,8 @@
    "source": [
     "def parse_trips(trips):\n",
     "    parsed=[]\n",
-    "    n=0\n",
-    "    while n <= len(trips):\n",
+    "   \n",
+    "    for x in trips:\n",
     "        parsed_all={\"trip_distance\":trips[n].get(\"trip_distance\"), \"pickup_latitude\":trips[n].get(\"pickup_latitude\"),\"pickup_longitude\":trips[n].get(\"pickup_longitude\")}\n",
     "        n+=1\n",
     "        parsed.append(parsed_all)\n",
