automatically backed up by learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -222,6 +222,7 @@
    ],
    "source": [
     "def parse_trips(trips):\n",
+    "    n=range(0)\n",
     "    parsed=[]\n",
     "    for x in trips:\n",
     "        parsed_all={\"trip_distance\":trips[n].get(\"trip_distance\"), \"pickup_latitude\":trips[n].get(\"pickup_latitude\"),\"pickup_longitude\":trips[n].get(\"pickup_longitude\")}\n",
