automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -225,7 +225,7 @@
     "    n=range(0,len(trips))\n",
     "    parsed=[]\n",
     "    for x in trips:\n",
-    "        parsed_all={\"trip_distance\":x[n].get(\"trip_distance\"), \"pickup_latitude\":x[n].get(\"pickup_latitude\"),\"pickup_longitude\":trips[n].get(\"pickup_longitude\")}\n",
+    "        parsed_all={\"trip_distance\":x[n].get(\"trip_distance\"), \"pickup_latitude\":x[n].get(\"pickup_latitude\"),\"pickup_longitude\":x[n].get(\"pickup_longitude\")}\n",
     "        n+=1\n",
     "        parsed.append(parsed_all)\n",
     "    return parsed\n"
